# Hunter-Prizzrak

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .vulture_whitelist.py  AGENTS.md  CLAUDE.md  CONFIG_AUDIT_TASKS.md  HUNTER_AUDIT_PROMPTS.md  HUNTER_AUDIT_ROUND2_PROMPT.md  HUNTER_INTERNAL_FIXES_WORKORDER.md  MAPS_RESEARCH_UPGRADE.md  MAPS_REVIEW.md  PROJECT_MAP.md  README.md  REVIEW_market.md  classify_files.py  config.defaults.toml  config.toml  opencode.json  opencode.jsonc  pyproject.toml
.claude/: settings.json
.claude/agents/: ccxt-safety-reviewer.md  config-drift-auditor.md  no-lookahead-reviewer.md  phantom-key-auditor.md
.cursor/rules/: 000-hunt.mdc
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.opencode/agents/: review.md
analysis/: 01_funnel_gate_candidates.py  02_edge_report.py  02_factor_correlation.py  03_feature_importance.py  04_proxy_metrics.py  05_classify_fallbacks.py
docs/: ARCHITECTURE.md  AUDIT_CHECKPOINT.md  AUDIT_ROUND2.md  HUNTER_TARGET_SPEC.md  MANIPULATION_METHODOLOGY.md  MANIPULATION_METHODOLOGY_COMPLETE.md  PRIZRAK_METHODOLOGY.md  PUMP_QUICK_GUIDE.md  SPEC_v5.1.md  observability.md
docs/adr/: 0001-weight-governor-admission-control.md  0002-ccxt-native-data-engine.md  0003-engine-cutover.md  0003-streams-wiring-spec.md  0004-native-module-rewrite.md
docs/engine/: ccxt-practitioner-notes.md  data-catalog.md  library-adoption.md  sessions-and-windows.md
hunt_core/: __init__.py  __main__.py  _cli.py  bootstrap.py  clock.py  contract.py  data_readiness.py  errors.py  paths.py  secrets.py  serde.py
hunt_core/confluence/: __init__.py  mtf.py
hunt_core/data/: __init__.py  baseline_store.py  collect.py  completeness.py  frame_cache.py  jsonl_io.py  lake.py  lake_warmup.py  symbol_blacklist.py  tick_jsonl.py  universe.py
hunt_core/deliver/: _context_lines.py  _followup.py  _labels.py  _math.py  _sections.py  _setup_lines.py  confluence_grid.py  delivery_state.py  digest.py  geometry.py  lab.py  manipulation_delivery.py  readiness.py  telegram.py  templates.py  zone_confluence.py
hunt_core/diagnostics/: __init__.py  data_plane_audit.py  tick_diagnostics.py  universe_audit.py  universe_health.py
hunt_core/domain/: __init__.py  config.py  feature_registry.json  knowledge.py  schemas.py  signal_horizon.py  snapshot.py  structure_state.py
hunt_core/engine/: __init__.py  __main__.py  api.py  dns.py  exchanges.py  freshness.py  funding_stats.py  health.py  ingest.py  liquidations.py  metrics.py  multi.py  oi_stats.py  orderflow.py  params.py  rest.py  spot.py  spot_metrics.py  state.py
hunt_core/features/: build.py  candle_patterns.py  chart_patterns.py  factors.py  feature_engine.py  fib.py  microstructure.py  models.py  pivots.py  polars_ta_bridge.py  prepare.py  prepare_columns.py  prepare_frame.py  research_plugins.py  shared.py  snapshot.py  structure.py  summary.py  volume_profile.py
hunt_core/levels/: __init__.py  levels.py  structural_facts.py
hunt_core/maps/: __init__.py  config.py  cross.py  engine.py  feed.py  liquidation.py  oi.py  orderbook.py  volume_profile.py
hunt_core/market/: __init__.py  capacity.py  ccxt_guard.py  ccxt_rest.py  client.py  cross.py  factory.py  live_price.py  network.py  rate_limit.py  spot.py  streams.py  symbol_gate.py  symbols.py  tick_registry.py  weight_registry.py
hunt_core/params/: __init__.py  store.py
hunt_core/prizrak/: __init__.py  accumulation.py  adapter.py  arbiter.py  assemble.py  build.py  config.py  confluence.py  dominance.py  dominance_source.py  entry.py  figures.py  forecast_panel.py  format_telegram.py  invalidation.py  liq_reconcile.py  marketcap.py  marketcap_source.py  models.py  orchestrator.py  poc.py  pp.py  stop_volume.py  structural_forecast.py  structural_forecast_native.py  structure.py  traps.py
hunt_core/regime/: __init__.py  classifier.py  market_regime.py  regime.py
hunt_core/research/: __init__.py  build.py  build_deep.py  control.py  experiment.py  hypotheses.py  outcome_store.py  stats.py
hunt_core/runtime/: __init__.py  analyst_assembly.py  emitter.py  heartbeat.py  logging.py  (+14 more)
research/: README.md  audit_horizon.py  backtest_c_target.py  backtest_horizon_variant.py  backtest_scanner.py  backtest_short_ltfgate.py  backtest_short_mechanics.py  backtest_target_variant.py  measure_body_semantics.py  paths.py  prizrak_replay.py
scripts/: align_frames.py  backtest_scanner_outcomes.py  calibrate_thresholds.py  check_prohibited_apis.py  clean_hunt_session.py  ground_razbor.py  guard_edit.py  independent_review.py  ingest_manipulation_video.py  live_5h_monitor.sh  live_check.sh  live_tg_soak.sh  monitor_live.py  prizrak_vs_channel.py  refresh-ccxt-skill.sh  refresh_dominance_cache.py  refresh_marketcap_cache.py  research_manipulations.py  review_loop.sh  scan_pumps.py  scanner_replay_geometry.py  supervised_session.py  verify_hunt_rebuild.sh  verify_scanner_vs_channel.py  watch.sh
tests/: _deep_fixtures.py  test_audit_round2_p1_fixes.py  test_audit_round2_p2_fixes.py  test_audit_round2_track_fixes.py  test_bg_refresh_retained.py  test_blackout_self_restart.py  test_candidate_dedup.py  test_candle_star_midpoint.py  test_circuit_breaker.py  test_closed_bar_convention.py  test_cluster_levels_order.py  test_config_and_secrets.py  test_counter_bias_reaction_framing.py  test_cross_book_alignment.py  test_cross_book_contract_size.py  test_cross_exchange_aggregation.py  test_cross_volume_profile_weighting.py  test_crypto_only_universe.py  test_cvd_divergence_normalized.py  test_deep_card_briefing.py  test_deep_sticky_walls_delivered.py  test_delivery_keys_no_dup.py  test_depth_bins_sides.py  test_dns_session_cache.py  test_dom_window_labels.py  test_double_bottom_fires.py  test_dump_forecast_nearest.py  test_engine_freshness.py  test_engine_funding_stats.py  test_engine_klines_full.py  test_engine_liquidations.py  test_engine_metrics.py  test_engine_multi.py  test_engine_oi_stats.py  test_engine_orderflow.py  test_engine_properties.py  test_engine_rest.py  test_engine_spot.py  test_engine_spot_metrics.py  test_engine_state.py  (+118 more)
(+162 files in other folders)
