[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-hunter"
version = "1.0.0"
description = "Standalone crypto futures hunter — Binance USDⓈ-M public data via ccxt(pro), Polars feature engine."
readme = "README.md"
# Standalone build: Python 3.14.5 (not 3.14t).
requires-python = ">=3.14,<3.15"
license = { text = "MIT" }
authors = [{ name = "Crypto Signal Bot" }]
dependencies = [
    "orjson>=3.10",
    "python-dotenv>=1.2.2",
    "polars>=1.41.2",
    "polars-ols>=0.3.5",
    "polars_ta>=0.5.17",
    "polars-ds>=0.12",
    "numpy>=2.4.6",
    "bottleneck>=1.4",
    "aiohttp>=3.13.5,<4",
    "aiohttp-socks>=0.10.1",
    "python-socks[asyncio]>=2.7.1",
    "aiogram>=3.28.2",
    "tenacity>=9.1.4",
    "structlog>=25.5.0",
    "pydantic>=2.13.4,<2.14",
    "ccxt>=4.5",
]

[project.urls]
Homepage = "https://github.com/TrololoBird/Crypto-Analytic-Signal-Bot"
Repository = "https://github.com/TrololoBird/Crypto-Analytic-Signal-Bot"

[project.optional-dependencies]
dev = ["ruff>=0.15", "mypy>=2.1.0", "pytest>=8.4", "pytest-asyncio>=0.25", "hypothesis>=6.100"]
diagnostics = ["rich>=13.0"]
monitoring = ["prometheus-client>=0.25", "prometheus-async>=26.0"]
otel = [
    "opentelemetry-sdk>=1.30",
    "opentelemetry-exporter-otlp-proto-http>=1.30",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["hunt_core*"]

[tool.ruff]
target-version = "py314"
line-length = 100
exclude = [".git", ".venv", "_archive", "build", "dist"]

[tool.ruff.lint]
# Hunt uses lazy imports and scan split globals().update() facades.
ignore = ["E402", "E741"]
# TID251 (banned-api) mechanically enforces the "no pandas / no requests" rule that
# previously lived only as prose in the AI instructions (docs/ai/rules/prohibited-apis.md).
extend-select = ["TID251"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"pandas".msg = "No pandas — use the Polars Expression API / LazyFrame. See docs/ai/rules/prohibited-apis.md."
"pandas.DataFrame".msg = "No pandas — use polars.DataFrame / LazyFrame. See docs/ai/rules/prohibited-apis.md."
"requests".msg = "No requests — the stack is fully async; use aiohttp. See docs/ai/rules/prohibited-apis.md."

[tool.ruff.lint.per-file-ignores]
"hunt_core/runtime/_impl.py" = ["E402"]
"hunt_core/domain/schemas.py" = ["E402"]
"hunt_core/market/streams.py" = ["E741"]
"hunt_core/runtime/cycle.py" = ["F841"]
"hunt_core/data_readiness.py" = ["F841"]

[tool.mypy]
ignore_missing_imports = true
warn_unused_ignores = false
exclude = ["_archive", "build", "dist"]

[[tool.mypy.overrides]]
module = ["hunt_core.toolkit.*", "hunt_core.research.*"]
ignore_errors = true
