[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-hunter"
version = "1.0.0"
description = "Standalone crypto futures hunter — Binance USDⓈ-M public data via ccxt(pro), Polars feature engine."
readme = "README.md"
# Standalone build: Python 3.14.5 (not 3.14t).
requires-python = ">=3.14,<3.15"
license = { text = "MIT" }
authors = [{ name = "Crypto Signal Bot" }]
dependencies = [
    "orjson>=3.10",
    "python-dotenv>=1.2.2",
    # Polars-plugin floors = the exact versions the 500+-test suite (incl.
    # tests/test_indicator_reference_values.py
    # canaries) is validated against. These plugins drift APIs without semver
    # discipline (precedent: polars_ols went to positional `features` args +
    # mode="coefficients"; ccxt fstream split) — do NOT lower the floors, and
    # re-run the canaries when bumping.
    "polars>=1.41.2",
    "polars-ols>=0.3.5",   # compute_(rolling_)least_squares positional exprs, mode=, RollingKwargs(null_policy=)
    "polars_ta>=0.5.17",   # polars_ta.ta/.tdx/.wq surfaces used by features/polars_ta_bridge.py
    "polars-ds>=0.12.0",   # query_entropy / ks_2samp exprs used by features/research_plugins.py
    "numpy>=2.4.6",
    "bottleneck>=1.4",
    "aiohttp>=3.13.5,<4",
    "aiohttp-socks>=0.10.1",
    "python-socks[asyncio]>=2.7.1",
    "aiogram>=3.28.2",
    "tenacity>=9.1.4",
    "structlog>=25.5.0",
    "pydantic>=2.13.4,<2.14",
    # Hard floor 4.5.44: older ccxt silently loses kline/markPrice/forceOrder WS
    # after Binance's 2026-04-23 fstream split (docs/HUNTER_TARGET_SPEC.md).
    "ccxt>=4.5.44",
]

[project.urls]
Homepage = "https://github.com/TrololoBird/Crypto-Analytic-Signal-Bot"
Repository = "https://github.com/TrololoBird/Crypto-Analytic-Signal-Bot"

[project.optional-dependencies]
dev = ["ruff>=0.15", "mypy>=2.1.0", "pytest>=8.4", "pytest-asyncio>=0.25", "hypothesis>=6.100"]
diagnostics = ["rich>=13.0"]
monitoring = ["prometheus-client>=0.25", "prometheus-async>=26.0"]
otel = [
    "opentelemetry-sdk>=1.30",
    "opentelemetry-exporter-otlp-proto-http>=1.30",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["hunt_core*"]

[tool.ruff]
target-version = "py314"
line-length = 100
exclude = [".git", ".venv", "_archive", "build", "dist", ".vulture_whitelist.py"]
# Honour `exclude` even when a path is passed explicitly (pre-commit passes files by
# name, which would otherwise bypass the exclude and lint .vulture_whitelist.py).
force-exclude = true

[tool.ruff.lint]
# Hunt uses lazy imports and scan split globals().update() facades.
ignore = ["E402", "E741"]
# TID251 (banned-api) mechanically enforces the "no pandas / no requests" rule that
# previously lived only as prose in the AI instructions (docs/ai/rules/prohibited-apis.md).
extend-select = ["TID251"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"pandas".msg = "No pandas — use the Polars Expression API / LazyFrame. See docs/ai/rules/prohibited-apis.md."
"pandas.DataFrame".msg = "No pandas — use polars.DataFrame / LazyFrame. See docs/ai/rules/prohibited-apis.md."
"requests".msg = "No requests — the stack is fully async; use aiohttp. See docs/ai/rules/prohibited-apis.md."

[tool.ruff.lint.per-file-ignores]
"hunt_core/runtime/_impl.py" = ["E402"]
"hunt_core/domain/schemas.py" = ["E402"]
"hunt_core/market/streams.py" = ["E741"]
"hunt_core/runtime/cycle.py" = ["F841"]
"hunt_core/data_readiness.py" = ["F841"]

[tool.mypy]
ignore_missing_imports = true
warn_unused_ignores = false
exclude = ["_archive", "build", "dist"]

[[tool.mypy.overrides]]
module = ["hunt_core.toolkit.*"]
ignore_errors = true

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest-testmon>=2.2.0",
    "pytest-xdist>=3.8.0",
    "vulture>=2.16",
]

[tool.vulture]
# Dead-code guard (the project's I-6 defect class). min_confidence=80 keeps it
# signal-only (conf 60 = 396 mostly-false hits); .vulture_whitelist.py suppresses
# the reviewed intentional cases (signature-contract params).
min_confidence = 80
paths = ["hunt_core", ".vulture_whitelist.py"]
